Fix to Analyze build

--- a/.github/workflows/code_build.yaml
+++ b/.github/workflows/code_build.yaml
@@ -93,8 +93,7 @@ jobs:
       uses: github/codeql-action/init@v1
       with:
         languages: ${{ matrix.language }}
-    - run: |
-        cd Libraries
-        dotnet build /p:DefineConstants=TRACE%3BPERFTEST /p:Configuration=Release
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v1
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
