Update to environment variable name

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,10 +32,10 @@ jobs:
       run: dotnet pack --configuration Release /p:Version=${VERSION} --no-build --output .
     - name: Push IntegrationTool Libraries
       run: |
-        dotnet nuget push IntegrationTool.Core.${VERSION}.nupkg --source https://nuget.pkg.github.com/kdemanuele/index.json --api-key ${GITHUB_TOKEN}
-        dotnet nuget push IntegrationTool.Transform.${VERSION}.nupkg --source https://nuget.pkg.github.com/kdemanuele/index.json --api-key ${GITHUB_TOKEN}
-        dotnet nuget push IntegrationTool.Validate.${VERSION}.nupkg --source https://nuget.pkg.github.com/kdemanuele/index.json --api-key ${GITHUB_TOKEN}
+        dotnet nuget push IntegrationTool.Core.${VERSION}.nupkg --source https://nuget.pkg.github.com/kdemanuele/index.json --api-key ${NUGET_GITHUB_TOKEN}
+        dotnet nuget push IntegrationTool.Transform.${VERSION}.nupkg --source https://nuget.pkg.github.com/kdemanuele/index.json --api-key ${NUGET_GITHUB_TOKEN}
+        dotnet nuget push IntegrationTool.Validate.${VERSION}.nupkg --source https://nuget.pkg.github.com/kdemanuele/index.json --api-key ${NUGET_GITHUB_TOKEN}
       env:
-        GITHUB_TOKEN: ${{ secrets.NUGET_GITHUB_TOKEN }}
+        NUGET_GITHUB_TOKEN: ${{ secrets.NUGET_GITHUB_TOKEN }}
 
 # Adopted from: https://acraven.medium.com/a-nuget-package-workflow-using-github-actions-7da8c6557863
